Cleaning up the clustering concave hull code.
A number of changes:
- code simplification;
- make the run method self-contained;
- improved test case;